--- a/homeworks/index.html
+++ b/homeworks/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>lop 71</title>
 </head>
 <body>
-    <script src="ss2-3.js"></script>
+    <h1>hello</h1>
+    <h2>hello</h2>
+    <h6>hello</h6>
+    <p>I am</p>
+    <img src="https://genk.mediacdn.vn/thumb_w/640/2019/10/16/pixel-image-1-15711948680921149315497-crop-15711968629591144940646.jpg" alt="đây là ảnh">
+    <iframe src="iframe width="795" height="447" src="https://www.youtube.com/embed/OiyJbJtAhPg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" frameborder="0"></iframe>
+    <a href="https://www.youtube.com/watch?v=92NIgOfR29Y">don't</a>
+    <input type="number">
+    <input type="password" placeholder="password">
+    <input type="text" placeholder="username">
+    <input type="date">
+    <button>đăng nhập</button>
+    <ul>
+        <li>item 1</li>
+        <li>item 2</li>
+    </ul>
+    <ol>
+        <li>item 1</li>
+        <li>item 2</li>
+    </ol>
+    <div>i'm div</div>
+    <span>i'm span</span>
+    <span>i'm span 1</span>
 </body>
 </html>
